syntax = "proto3";

package iman;


service GetService {
    rpc GetInfoFromAPI(Empty) returns (GetNetRes);
    rpc CreatePost(CreatePostsReq) returns (CreatePostsRes);
    rpc GetNetThenInsertDB (Empty) returns (CreatePostsRes);
}
message Empty{}

message GetNetReq {
    string link = 1;
}

message AllInfo {
    Meta meta = 1;
    repeated Post data = 2;
}

message GetNetRes {
    repeated Post posts = 1;
}

message Meta {
    Pagination pagination = 1;   
}

message Pagination {
    int64 total = 1;
    int64 pages = 2;
    int64 page = 3;
    int64 limit = 4;
    Links links = 5;
}

message Links {
    string previous = 1;
    string current = 2;
    string next = 3;

}

message Post {
    int64 id = 1;
    int64 user_id = 2;
    string title = 3;
    string body = 4;
}

message CreatePostsReq{
    repeated Post posts = 1;
}

message CreatePostsRes {
    string success = 1;
}